cluster/core/netpol/home-assistant.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-home-assistant-ingress
  namespace: home-automation
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          ns: traefik
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: traefik
    ports:
    - protocol: TCP
      port: 8123
    - protocol: TCP
      port: 8080
  - from:
    - namespaceSelector:
        matchLabels:
          ns: uptime
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: uptime
    ports:
    - protocol: TCP
      port: 8123
    - protocol: TCP
      port: 8080
  - from:
    - namespaceSelector:
        matchLabels:
          ns: home-automation
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: node-red
    ports:
    - protocol: TCP
      port: 8123
  - from:
    - ipBlock:
        cidr: 192.168.0.0/24
    - ipBlock:
        cidr: 192.168.10.0/24
    - ipBlock:
        cidr: 192.168.20.0/24
    - ipBlock:
        cidr: 192.168.30.99/32
    - ipBlock:
        cidr: 192.168.30.100/32
    - ipBlock:
        cidr: 192.168.30.101/32
    - ipBlock:
        cidr: 192.168.30.102/32
    - ipBlock:
        cidr: 192.168.30.103/32
    - ipBlock:
        cidr: 192.168.30.201/32
    - ipBlock:
        cidr: 192.168.30.202/32
    - ipBlock:
        cidr: 192.168.90.0/24
    ports:
    - protocol: TCP
      port: 8123
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-home-assistant-egress
  namespace: home-automation
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: adguard
      podSelector:
        matchLabels:
          app.kubernetes.io/name: adguard-home
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    - port: 3000
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 192.168.0.10/32
    - ipBlock:
        cidr: 192.168.0.77/32
    - ipBlock:
        cidr: 192.168.0.78/32
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 192.168.0.14/32
    ports:
    - protocol: TCP
      port: 1883
    - protocol: TCP
      port: 8443
    - protocol: TCP
      port: 8883
  - to:
    - namespaceSelector:
        matchLabels:
          ns: galera
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: mariadb-galera
    ports:
    - protocol: TCP
      port: 3306
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
    ports:
    - port: 80
      protocol: TCP
    - port: 443
      protocol: TCP
    - port: 46030
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 192.168.10.0/24
  - to:
    - ipBlock:
        cidr: 192.168.20.0/24
  - to:
    - namespaceSelector:
        matchLabels:
          ns: home-automation
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: piper
    ports:
    - protocol: TCP
      port: 10200
  - to:
    - namespaceSelector:
        matchLabels:
          ns: home-automation
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: whisper
    ports:
    - protocol: TCP
      port: 10300
  - to:
    - namespaceSelector:
        matchLabels:
          ns: jellyfin
      podSelector:
        matchLabels:
          app.kubernetes.io/name: jellyfin
    ports:
    - port: 8096
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: traefik
      podSelector:
        matchLabels:
          app.kubernetes.io/name: traefik
    ports:
    - port: 8443
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: home-automation
      podSelector:
        matchLabels:
          app.kubernetes.io/name: mosquitto
    ports:
    - port: 8883
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 192.168.0.1/32
    - ipBlock:
        cidr: 192.168.0.11/32
    - ipBlock:
        cidr: 192.168.0.15/32 #required for tts.cloud_say
    ports:
    - port: 443
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 192.168.30.50/32
    - ipBlock:
        cidr: 192.168.30.51/32
    ports:
    - port: 2323
      protocol: TCP
